# UTBM_IN55_ParametricObjectsConstruction

./: CMakeLists.txt  LICENSE  README.md
cmake/: common.cmake  glew.cmake  glfw.cmake  glm.cmake  imgui.cmake  opengl.cmake
extlibs/glew-2.1.0/lib/msvc/Win32/: glew32.lib
extlibs/glew-2.1.0/lib/msvc/x64/: glew32.lib
extlibs/imgui/: CMakeLists.txt
extlibs/imgui/src/: imgui.cpp
include/: Camera.hpp  ContextSettings.hpp  Event.hpp  GlfwInitializer.hpp  Keyboard.hpp  Mouse.hpp  ParametricObject.hpp  Shader.hpp  ShaderProgram.hpp  SphericalCamera.hpp  VideoMode.hpp  Window.hpp  callbacks.hpp  imgui_easy_theming.hpp
include/gui/: Drawable.hpp  FPSOverlay.hpp  POConfigPanel.hpp
report-fr/: Makefile  clean.cmd  main.tex  make.cmd  packages.tex  presentation.tex  settings.tex
report-fr/figures/: face_1_1.tex  face_1_2.tex  face_1_3.tex  face_2_1.tex  face_2_2.tex  face_2_3.tex  layers_1_empty.tex  layers_2_nearest_lines.tex  layers_3_triangles_quadrilaterals.tex  layers_4_quadrilaterals_diagonals.tex  seq_face_1.tex  seq_face_2.tex  seq_layers.tex  seq_polygon_creation.tex  technologies_used.tex
shaders/: vertex.glsl
shaders/imgui/: fragment.glsl  vertex.glsl
src/: Camera.cpp  ContextSettings.cpp  Event.cpp  GlfwInitializer.cpp  ParametricObject.cpp  Shader.cpp  ShaderProgram.cpp  SphericalCamera.cpp  VideoMode.cpp  Window.cpp  callbacks.cpp  imgui_easy_theming.cpp  main.cpp
src/gui/: FPSOverlay.cpp  POConfigPanel.cpp
src/implementation/: ImguiImpl.cpp  ImguiImpl.hpp
uml/: main.mdj
